HelloUltraviolet/Fixtures/RejectedSource/Parallelism/ParallelClosureCaptureUnique/Expected.uv
//! Expected diagnostic metadata for the ParallelClosureCaptureUnique rejected-source specimen.

expectedDiagnostic("E-CON-0120", "rule.20.Parallel-Closure-Capture-Unique-Err")
